make-a-wish-salesforce/src/objects/VisualAntidote__FastFormsSiteInfo__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>App keys information</description>
    <fields>
        <fullName>VisualAntidote__ClientID__c</fullName>
        <inlineHelpText>This field is deprecated.</inlineHelpText>
        <label>ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__ClientSecret__c</fullName>
        <inlineHelpText>This field is deprecated.</inlineHelpText>
        <label>Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Environment__c</fullName>
        <inlineHelpText>For formstack use only.</inlineHelpText>
        <label>Environment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__FastFormsSiteUrl__c</fullName>
        <label>Formstack Site Url</label>
        <type>Url</type>
    </fields>
    <label>Formstack Site Information</label>
</CustomObject>